toggle-organic alignment fix

--- a/src/features/gag/components/gags-picker/index.module.css
+++ b/src/features/gag/components/gags-picker/index.module.css
@@ -45,7 +45,7 @@
 
 
 .headingBtnWrap {
-  align-items: stretch;
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
